--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Prep-infinity",
-  "version": "0.1.0",
+  "name": "prep-infinity",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
@@ -45,13 +45,15 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76"
   },
-
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.1.4",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
