--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "html2pdf.js": "^0.10.2",
     "inngest": "^3.29.3",
     "lucide-react": "^0.471.1",
-    "next": "14.3.1",
+    "next": "latest",
     "next-themes": "^0.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
